--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -17,7 +17,7 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ms-auto">
-        <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
+        <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
         <li class="nav-item"><a class="nav-link" href="#">Categories</a></li>
         <li class="nav-item"><a class="nav-link" href="#">Best Sellers</a></li>
         <li class="nav-item"><a class="nav-link" href="#">Contact Us</a></li>
